--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/router": "^19.1.0",
     "@fortawesome/angular-fontawesome": "^1.0.0",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.8",
+    "ng2-charts": "^8.0.0",
     "nvm": "^0.0.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
