--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ng2-charts": "^8.0.0",
     "nvm": "^0.0.4",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.22.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
